Closed Bug 1973042 Opened 9 months ago Closed 9 months ago

Fetch requests from workers don't honor the tracking protection settings

Categories

(Core :: Privacy: Anti-Tracking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
142 Branch
Tracking Status
firefox142 --- fixed

People

(Reporter: timhuang, Assigned: timhuang)

Details

Attachments

(1 file)

The fetch request from PFetch doesn't set the mUseTrackingProtection when creating its loadContext. As a result, this disables the tracking protection even if the setting enables it.

Pushed by tihuang@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/9f16ba6196c4 https://hg.mozilla.org/integration/autoland/rev/9cb5d6117921 Ensure the LoadContext will contain the right tracking protection setting. r=anti-tracking-reviewers,emz
Status: ASSIGNED → RESOLVED
Closed: 9 months ago
Resolution: --- → FIXED
Target Milestone: --- → 142 Branch
Regressions: 1973984
No longer regressions: 1973984
QA Whiteboard: [qa-triage-done-c143/b142]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: