Bug 1973042 - Ensure the LoadContext will contain the right tracking protection setting. r=anti-tracking-reviewers,emz

Differential Revision: https://phabricator.services.mozilla.com/D254388